# arxiv-sanity-preserver

./: .gitignore  Dockerfile  LICENSE.md  OAI_seed_db.py  README.md  a  all_in_one.py  analyze.py  buildsvm.py  cookie.txt  cypherize.py  dabbrivia_list_db.py  daily_update.sh  docker.sh  download_pdfs.py  extract_bibraw_from_txt.py  fetch_papers.py  get_google_scholar.py  google-scholar-url.txt  make_cache.py  nginx.default  notes.md  package.json  parse_OAI_XML.py  parse_bibraw_to_bib.rb  parse_pdf_to_text.py  parse_pdf_to_text_TET.py  parse_raw.py  predict.py  print_db.py  print_db_copy.py  pyproject.toml  requirements.txt  run_sever.sh  schema.sql  scrape.py  serve.py  serverless.yml  sneakpeek.py  thumb_pdf.py  (+5 more)
.serverless/: cloudformation-template-create-stack.json  cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
example_events/: download_pdfs.json  dynamo_stream_01.json  fetch_entries_req_01.json  fetch_papers.json  s3_stream_put_01.json  sns_notif_01.json
googlescholar/: README.md  scholar.py
lambdas/: clear_buckets.py  download_pdfs.py  extract_done.py  extract_text.py  fetch_entry_data.py  fetch_papers.py  output_text.py  process_stream.py
ogfiles/: buildsvm.py  download_pdfs.py  schema.sql
ogfiles/asp2/: serverless.yml
static/: as-common.js  style.css
templates/: account.html  discuss.html  main.html  people_search.html  rss.xml
